# aman

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  READMEold.md  ROADMAP.md  ROUTER_PROMPT.md  SUPPORT_PROMPT.md  SYSTEM_PROMPT.md
crates/: README.md
crates/activist-notification/: Cargo.toml
crates/activist-notification/src/: lib.rs
crates/admin-web/: Cargo.toml  README.md
crates/admin-web/src/: config.rs  error.rs  main.rs  state.rs
crates/admin-web/src/routes/: broadcast.rs  dashboard.rs  health.rs  mod.rs
crates/admin-web/static/: style.css
crates/admin-web/templates/: base.html  broadcast.html  dashboard.html
crates/agent-brain/: Cargo.toml  README.md
crates/agent-brain/src/: brain.rs  config.rs  events.rs  lib.rs  regions.rs
crates/agent-tools/: Cargo.toml  README.md
crates/agent-tools/examples/: test_tools.rs
crates/agent-tools/src/: error.rs  executor.rs  lib.rs  registry.rs  tool.rs
crates/agent-tools/src/tools/: bitcoin_price.rs  calculator.rs  crypto_price.rs  currency_converter.rs  dictionary.rs  mod.rs  random_number.rs  sanitize.rs  unit_converter.rs  weather.rs  web_fetch.rs  world_time.rs
crates/api/: Cargo.toml  README.md
crates/api/src/: main.rs
crates/brain-core/: Cargo.toml  README.md
crates/brain-core/src/: error.rs  history.rs  lib.rs  memory.rs  message.rs  prompt.rs  tools.rs  trait_def.rs
crates/broadcaster/: Cargo.toml  README.md
crates/broadcaster/src/: lib.rs
crates/database/: Cargo.toml  README.md
crates/database/migrations/: 001_initial.sql  002_seed_more_regions.sql  003_orchestrator_memory.sql  004_nostr_memory.sql  004_user_profiles.sql  006_drop_broadcast_tables.sql
crates/database/src/: clear_context_event.rs  conversation_summary.rs  error.rs  lib.rs  models.rs  notification.rs  preference.rs  tool_history.rs  topic.rs  user.rs  user_profile.rs  validation.rs
crates/donation-wallet/: Cargo.toml  README.md
crates/donation-wallet/src/: config.rs  error.rs  lib.rs  wallet.rs
crates/donation-wallet/tests/: spark_integration.rs
crates/grok-brain/: Cargo.toml  README.md
crates/grok-brain/examples/: test_chat.rs  test_search.rs
crates/grok-brain/src/: api_types.rs  brain.rs  config.rs  history.rs  lib.rs  tool_executor.rs
crates/ingester/: Cargo.toml  README.md
crates/ingester/src/: main.rs
crates/maple-brain/: Cargo.toml  PROMPT.md  README.md
crates/maple-brain/examples/: list_models.rs  test_chat.rs  test_vision.rs  test_with_grok.rs
crates/maple-brain/src/: brain.rs  config.rs  history.rs  lib.rs  tools.rs
crates/message-listener/: Cargo.toml  README.md
crates/message-listener/examples/: maple_bot.rs  processor_bot.rs
crates/message-listener/src/: lib.rs  processor.rs
crates/mock-brain/: Cargo.toml  README.md
crates/mock-brain/examples/: echo_with_signal.rs
crates/mock-brain/src/: delayed.rs  echo.rs  error.rs  lib.rs  message.rs  prefix.rs  signal_integration.rs
crates/nostr-persistence/: Cargo.toml  README.md
crates/nostr-persistence/fixtures/: doc.json
crates/nostr-persistence/src/: config.rs  crypto.rs  error.rs  events.rs  indexer.rs  lib.rs  publish.rs
crates/nostr-persistence/src/memory/: crypto.rs  mod.rs  publisher.rs  rehydrate.rs  types.rs
crates/nostr-persistence/tests/: relay_integration.rs
crates/orchestrator/: Cargo.toml  README.md
crates/orchestrator/examples/: orchestrated_bot.rs
crates/orchestrator/src/: actions.rs  context.rs  error.rs  formatting.rs  lib.rs  memory.rs  model_selection.rs  nostr.rs  orchestrator.rs  preferences.rs  profile.rs  router.rs  sender.rs
crates/proton-proxy/: Cargo.toml  README.md
crates/proton-proxy/examples/: send_email.rs  watch_inbox.rs
crates/proton-proxy/src/: client.rs  config.rs  error.rs  imap_client.rs  lib.rs  types.rs  watcher.rs
crates/proton-proxy/tests/: imap_test.rs  send_test_email.rs
crates/signal-daemon/: Cargo.toml  README.md
crates/signal-daemon/examples/: echo_bot.rs  health_check.rs
crates/signal-daemon/src/: client.rs  config.rs  error.rs  lib.rs  process.rs  sse.rs
crates/signal-daemon/src/types/: envelope.rs  mod.rs  send.rs
crates/signal-daemon/tests/: integration_tests.rs
docs/: ADDING_ACTIONS.md  ADDING_TOOLS.md  AMAN.md  AMAN_LOCAL_DEV.md  ARCHITECTURE.md  DATA_RETENTION.md  DEBUGGING.md  NOSTR_MEMORY_SCHEMA.md  OPENSECRET_API.md  PROTON_PROXY.md  signal-cli-daemon.md
docs/aman/: README.md
docs/architecture/: aman-signal-mvp.md
docs/runbooks/: aman-local-dev.md
docs/security/: data-retention.md
knowledge/: access-now-digital-rights.md  aeinstein-digital-library.md  canvasopedia-toolbox.md  developer-information-sources.md  dmc-iq-digital-media-center.md  front-line-defenders-resources-hrds.md  gmfus-irans-authoritarian-playbook.md  ideas-beyond-borders-news.md  iraqi-civil-society-holistic-security-manual.md  iri-anticorruption-toolkit.md  middle-east-uncovered.md  paskoocheh-app-store.md  sldp-human-rights-business-toolkit.md  smex-digital-rights.md  stanford-law-building-human-rights-organization.md  starlink4iran-nasnet-connect.md  tech-tavaana.md  using-ai-to-improve-movements-effectiveness.md  world-liberty-congress-handbook.md
scripts/: _common.sh  build-signal-cli.sh  copy-project-context.sh  dev.sh  install-systemd.sh  link-device.sh  register-signal.sh  run-signal-daemon.sh  send-message.sh  signal-cli.sh  unlink-device.sh
web/: README.md
web/app/api/chat/: route.ts
workers/aman-gateway/: Cargo.toml  README.md  wrangler.toml
workers/aman-gateway/migrations/: 0001_init.sql
workers/aman-gateway/src/: lib.rs
workers/aman-gateway/src/nostr/: mod.rs  relay_client.rs  types.rs
