[workspace]
resolver = "2"
members = [
    "crates/admin-web",
    "crates/api",
    "crates/agent-brain",
    "crates/brain-core",
    "crates/broadcaster",
    "crates/database",
    "crates/maple-brain",
    "crates/ingester",
    "crates/message-listener",
    "crates/mock-brain",
    "crates/signal-daemon",
]
