[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/agent-brain",
    "crates/brain-core",
    "crates/broadcaster",
    "crates/database",
    "crates/grok-brain",
    "crates/maple-brain",
    "crates/ingester",
    "crates/message-listener",
    "crates/mock-brain",
    "crates/signal-daemon",
]
