[workspace]
resolver = "2"
members = [
    "crates/admin-web",
    "crates/api",
    "crates/agent-brain",
    "crates/brain-core",
    "crates/database",
    "crates/grok-brain",
    "crates/maple-brain",
    "crates/ingester",
    "crates/message-listener",
    "crates/mock-brain",
    "crates/orchestrator",
    "crates/proton-proxy",
    "crates/signal-daemon",
    "crates/agent-tools",
]
