[package]
name = "admin-web"
version = "0.1.0"
edition = "2021"
description = "Admin web interface for Aman Signal bot."

[[bin]]
name = "admin-web"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.5", features = ["fs"] }

# Local dependencies
database = { path = "../database" }
broadcaster = { path = "../broadcaster" }
signal-daemon = { path = "../signal-daemon" }
