[package]
name = "agent-tools"
version = "0.1.0"
edition = "2021"
description = "Tool registry and implementations for the Aman Signal bot"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
brain-core = { path = "../brain-core" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json"] }
meval = "0.2"
html2text = "0.14"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
