[package]
name = "api"
version = "0.1.0"
edition = "2021"

description = "Aman OpenAI-compatible API gateway."

[dependencies]
axum = { version = "0.7", features = ["json"] }
dotenvy = "0.15"
orchestrator = { path = "../orchestrator" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
