[package]
name = "brain-core"
version = "0.1.0"
edition = "2021"
description = "Core trait and types for brain implementations in the Aman Signal bot."

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
