[package]
name = "database"
version = "0.1.0"
edition = "2021"
description = "SQLite persistence layer for Aman."

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
