[package]
name = "grok-brain"
version = "0.1.0"
edition = "2021"
description = "xAI Grok-based brain implementation for the Aman Signal bot."

[lib]
path = "src/lib.rs"

[dependencies]
brain-core = { path = "../brain-core" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
tracing-subscriber = "0.3"

[[example]]
name = "test_chat"
path = "examples/test_chat.rs"

[[example]]
name = "test_search"
path = "examples/test_search.rs"
