[package]
name = "maple-brain"
version = "0.1.0"
edition = "2021"
description = "OpenSecret-based brain implementation for the Aman Signal bot."

[lib]
path = "src/lib.rs"

[dependencies]
brain-core = { path = "../brain-core" }
async-trait = "0.1"
base64 = "0.22"
futures = "0.3"
opensecret = "0.2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "fs"] }
tracing = "0.1"

[dev-dependencies]
chrono = "0.4"
dotenvy = "0.15"
futures = "0.3"
grok-brain = { path = "../grok-brain" }
signal-daemon = { path = "../signal-daemon" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "test_chat"

[[example]]
name = "test_with_grok"

[[example]]
name = "aman_bot"
