[package]
name = "message-listener"
version = "0.1.0"
edition = "2021"

description = "Signal-native message listener utilities for Aman."

[lib]
path = "src/lib.rs"

[dependencies]
signal-daemon = { path = "../signal-daemon" }
futures = "0.3"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
