[package]
name = "nostr-persistence"
version = "0.1.0"
edition = "2021"

description = "Nostr-backed persistence layer for Aman."

[lib]
path = "src/lib.rs"

[dependencies]
nostr-sdk = "0.44.1"
async-trait = "0.1"
base64 = "0.22"
hex = "0.4"
rand_core = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
xsalsa20poly1305 = "0.9"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
