[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"
description = "Message orchestrator for coordinating brain routing and tool execution"
license = "MIT"

[dependencies]
brain-core = { path = "../brain-core" }
maple-brain = { path = "../maple-brain" }
grok-brain = { path = "../grok-brain" }
agent-tools = { path = "../agent-tools" }
database = { path = "../database" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
futures = "0.3"
signal-daemon = { path = "../signal-daemon" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
