[package]
name = "proton-proxy"
version = "0.1.0"
edition = "2021"
description = "SMTP client for sending E2E encrypted email via Proton Mail Bridge"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-native-tls",
    "smtp-transport",
    "pool",
    "builder",
] }
tokio = { version = "1", features = ["rt", "macros"] }
thiserror = "2"
tracing = "0.1"
secrecy = { version = "0.10", features = ["serde"] }
mime_guess = "2"
mime = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
tracing-subscriber = "0.3"
