[package]
name = "proton-proxy"
version = "0.1.0"
edition = "2021"
description = "SMTP client for sending E2E encrypted email via Proton Mail Bridge"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-native-tls",
    "smtp-transport",
    "pool",
    "builder",
] }
async-imap = "0.10"
async-native-tls = "0.5"
futures = "0.3"
async-std = { version = "1.12", features = ["attributes"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
thiserror = "2"
tracing = "0.1"
secrecy = { version = "0.10", features = ["serde"] }
mime_guess = "2"
mime = "0.3"
mail-parser = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
