[package]
name = "signal-daemon"
version = "0.1.0"
edition = "2021"
description = "Rust client for signal-cli daemon."

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
urlencoding = "2"
futures = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
