[package]
name = "aman-gateway-worker"
version = "0.1.0"
edition = "2021"
description = "Cloudflare Worker OpenAI-compatible gateway for Aman (OpenRouter + KV memory)"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7" }
worker-macros = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
wasm-bindgen = "0.2"

[workspace]
