[package]
name = "aman-gateway-worker"
version = "0.1.0"
edition = "2021"
description = "Cloudflare Worker OpenAI-compatible gateway for Aman (OpenRouter + KV memory)"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["d1"] }
worker-macros = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
xsalsa20poly1305 = "0.9"
js-sys = "0.3"
wasm-bindgen = "0.2"
futures-util = "0.3"

[workspace]
